# questwend

./: .gitignore  CMakeLists.txt  README.md  jissou_keikaku.md  offload_optimize.md  prefill_layer_major.md  spec.md
cli/: main.cpp
core/: chat.cpp  chat.h  expert_cache.cpp  expert_cache.h  gguf_util.cpp  gguf_util.h  model.cpp  model.h  runtime.cpp  runtime.h  sampler.cpp  sampler.h  tokenizer.cpp  tokenizer.h  vision.cpp  vision.h
docs/: gpu_performance_guide.md  metal_unified_memory.md  mtp.md  resident_decode.md  vision_plan.md
memory/: instructions_20260606.md  instructions_20260607.md
server/: main.cpp
tests/: tokenize_main.cpp
